flux/infrastructure/controllers/cert-manager/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-webhook-egress-host
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: webhook
  ingress:
    - toPorts:
        - ports:
            - port: "10250"
              protocol: "TCP"
    - fromEntities:
        - kube-apiserver
  egress:
    - toPorts:
        - ports:
            - port: "6443"
              protocol: "TCP"
    - toEntities:
        - kube-apiserver
